# GeometryApp

./: .gitignore  CMakeLists.txt  circle.cpp  circle.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rectangle.cpp  rectangle.h  shape.cpp  shape.h  shapefactory.cpp  shapefactory.h  square.cpp  square.h  triangle.cpp  triangle.h
